Fixed site width on mobile.

--- a/themes/botwiki/src/styles/style.2.3.less
+++ b/themes/botwiki/src/styles/style.2.3.less
@@ -352,7 +352,10 @@ div#breadcrumbs a{
 /*---------------------------------------------*/
 .inner {
   margin: 0 auto;
-  padding: 0 2em;
+  padding: 5px;
+  @media (min-width : 910px) {
+    padding: 0 2em;
+  }
 }
 
 #header {
